// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<li
  className="cf-pagination__item cf-pagination__item--number"
  role={null}
>
  <a
    aria-label="PaginationLabel"
    className="cf-pagination__link"
    href="#"
    onClick={[Function]}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active 1`] = `
<li
  className="cf-pagination__item cf-pagination__item--number cf-pagination__item--active"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-pagination__link"
  >
    PaginationItem
  </span>
</li>
`;

exports[`should render disabled 1`] = `
<li
  className="cf-pagination__item cf-pagination__item--number cf-pagination__item--disabled"
  role={null}
>
  <span
    aria-label="PaginationLabel"
    className="cf-pagination__link"
  >
    PaginationItem
  </span>
</li>
`;
